--- a/.github/workflows/run-staging-scripts.yaml
+++ b/.github/workflows/run-staging-scripts.yaml
@@ -1,9 +1,10 @@
 name: 'Run Staging scripts'
 
 on:
-  schedule:
-    # * is a special character in YAML, so you have to quote this string
-    - cron: '*/15 * * * *'
+  workflow_dispatch:
+#  schedule:
+#    # * is a special character in YAML, so you have to quote this string
+#    - cron: '*/15 * * * *'
 
 jobs:
   build:
