--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 	"esModuleInterop": true,
 //	"forceConsistentCasingInFileNames": true,
 	"files": [
-		"src/index.ts"
+		"src/index.ts",
+		"src/stagingScripts.ts"
 	]
 }
