--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "node-fetch": "^3.2.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "typesense": "^1.2.2"
   }
 }
