--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ TYPESENSE_HOST=127.0.0.1
 TYPESENSE_PORT=8108
 TYPESENSE_PROTOCOL=http
 TYPESENSE_API_KEY=xyz
+TYPESENSE_HOST_PUBLIC=127.0.0.1
+TYPESENSE_PORT_PUBLIC=8108
+TYPESENSE_PROTOCOL_PUBLIC=http
+TYPESENSE_API_KEY_PUBLIC=xyz
