--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "node-fetch": "^3.2.0",
     "nodemailer": "^6.7.2",
-    "typesense": "^1.2.2"
+    "typesense": "^1.2.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
