--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ EMAIL_PORT=1486
 #EMAIL_USER
 #EMAIL_PASSWORD
 EMAIL_FROM=worker@localhost
+EMAIL_BCC=worker@localhost
 FRONTEND_URL=http://127.0.0.1:3000
 TYPESENSE_HOST=127.0.0.1
 TYPESENSE_PORT=8108
